tests/sksl/errors/PrivateTypes.glsl
### Compilation failed:

error: 33: type '$mat' is private
error: 33: type '$bvec' is private
error: 33: type '$ivec' is private
error: 33: type '$genType' is private
4 errors
